<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.mpay24.payment</groupId>
	<artifactId>mpay24-payment-sdk</artifactId>
	<version>1.9.7.0</version>
	<packaging>jar</packaging>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>mPAY24 SDK for Java. Allows easy access to the mPAY24 system.</description>
	<url>https://docs.mpay24.com</url>

	<properties>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Rene Felder</name>
			<email>rene.felder@mpay24.com</email>
			<organization>mPAY24 GmbH</organization>
			<organizationUrl>https://www.mpay24.com/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/mpay24/mpay24-payment-sdk.git</connection>
		<developerConnection>scm:git:https://github.com/mpay24/mpay24-payment-sdk.git</developerConnection>
		<url>https://github.com/mpay24/mpay24-payment-sdk.git</url>
	</scm>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<plugins>
			<!-- OSGI Bundle Plugin -->
			<!-- plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId>
				<configuration> <archive> <manifestFile>src/main/resources/META-INF/MANIFEST.MF</manifestFile>
				</archive> </configuration> </plugin> <plugin> <groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId> <version>2.3.6</version> <extensions>true</extensions>
				<configuration> <manifestLocation>src/main/resources/META-INF</manifestLocation>
				<excludeDependencies>${maven.bundleplugin.exclude.dependencies}</excludeDependencies>
				<instructions> <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
				<Bundle-Name>${project.name}</Bundle-Name> <Bundle-Version>${project.version}</Bundle-Version>
				<Bundle-Activator></Bundle-Activator> <Import-Package>*</Import-Package>
				<Export-Package>*</Export-Package> <Private-Package></Private-Package> <Web-ContextPath></Web-ContextPath>
				<Webapp-Context></Webapp-Context> <Bundle-ClassPath></Bundle-ClassPath> <Embed-Dependency></Embed-Dependency>
				<Embed-Directory></Embed-Directory> <Embed-Transitive></Embed-Transitive>
				</instructions> <supportedProjectTypes> <supportedProjectType>jar</supportedProjectType>
				<supportedProjectType>bundle</supportedProjectType> <supportedProjectType>war</supportedProjectType>
				</supportedProjectTypes> </configuration> <executions> <execution> <id>bundle-manifest</id>
				<phase>process-classes</phase> <goals> <goal>manifest</goal> </goals> </execution>
				</executions> </plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>1.5</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>deploy</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.7</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>com.mpay24.payment</groupId>
			<artifactId>mpay24-soap-client</artifactId>
			<version>1.6.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.1</version>
		</dependency>

		<dependency>
			<groupId>javax.xml.ws</groupId>
			<artifactId>jaxws-api</artifactId>
			<version>2.2.3</version>
		</dependency>

		<!-- Test dependencies -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.2</version>
			<scope>test</scope>
		</dependency>
		<!-- UI Test dependencies Selenium -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>4.8.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>htmlunit-driver</artifactId>
			<version>2.27</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>3.4.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
